--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
   "trailingComma": "none",
   "semi": false,
-  "singleAttributePerLine": false
+  "singleAttributePerLine": false,
+  "printWidth": 120
 }
