--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,19 @@
-#version: '3.8'
-#
-#services:
-#  dev:
-#    container_name: nestjs_api_dev
-#    image: nestjs-api-dev:1.0.0
-#    build:
-#      context: .
-#      target: development
-#      dockerfile: ./Dockerfile
-#    command: npm run start:debug
-#    ports:
-#      - "3000:3000"
-#      - "9229:9229"
-#    networks:
-#      - nesjs-network
-#    volumes:
-#      - .:/usr/src/app
-#      - /usr/src/app/node_modules
-#    restart: unless-stopped
-#  prod:
-#    container_name: nestjs_api_prod
-#    image: nestjs-api-prod:1.0.0
-#    build:
-#      context: .
-#      target: production
-#      dockerfile: ./Dockerfile
-#    command: npm run start:prod
-#    ports:
-#      - "3000:3000"
-#      - "9229:9229"
-#    networks:
-#      - nesjs-network
-#    volumes:
-#      - .:/usr/src/app
-#      - /usr/src/app/node_modules
-#    restart: unless-stopped
-#
-#networks:
-#  nesjs-network:
+version: '3.8'
+
+services:
+  pgsql:
+    image: postgres:alpine
+    ports:
+      - '5432:5432'
+    container_name: 'pgsql'
+    restart: always
+    volumes:
+      - pg-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: pguser
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: DBRealWorldApp
+
+
+volumes:
+  pg-data:
