--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "sqlite3": "^4.2.0",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41"
   },
@@ -66,6 +65,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "faker": "E5.5.3",
     "jest": "^27.2.5",
+    "jest-cucumber": "^3.0.1",
     "lodash": "^4.17.21",
     "prettier": "^2.6.2",
     "source-map-support": "^0.5.20",
